@startuml 

class Usuario {
  - nombre : string
  - email : string
  - referidos : Usuario[]
  - balance : float
  + agregar_referido(referido: Usuario)
}

class Producto {
  - nombre : string
  - precio : float
}

class Transaccion {
  - usuario : Usuario
  - producto : Producto
  + realizar_compra() : bool
}

Usuario "1" *-- "*" Usuario : referidos
Usuario "1" -- "1..*" Transaccion : realiza
Transaccion "1" -- "1" Producto : compra

@enduml